# us-jp-sector-app

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260415_f3a8b2c19e05_initial_schema.py  20260416_a3f2c1b9d8e0_change_signal_unique_key.py  20260416_b1c2d3e4f5a6_adjust_backtest_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  backtest.py  prices.py  signals.py
backend/app/models/: __init__.py  backtest.py  instrument.py  price.py  signal.py
backend/app/repositories/: __init__.py  backtest_repository.py  price_repository.py  signal_repository.py
backend/app/schemas/: __init__.py  backtest.py  price.py  signal.py
backend/app/scripts/: __init__.py  seed_instruments.py
backend/app/seed_data/: __init__.py  instruments.py  sector_mapping.py
backend/app/services/: __init__.py  backtest_service.py  calendar_service.py  paper_v1_signal_service.py  price_fetcher.py  price_service.py  signal_service.py
backend/scripts/: audit_paper_v2_coverage.py  build_evaluation_report.py  build_paper_v2_prior.py  run_evaluation_phase.py
backend/tests/: test_backtest_api.py  test_backtest_repository.py  test_backtest_service.py  test_calendar.py  test_paper_v1_signal_service.py  test_price_repository.py  test_price_service.py  test_prices_api.py  test_signal_service.py  test_signals_api.py
backend/tests/paper_v2/: test_artifact_loader.py  test_backtest_paper_v2_smoke.py  test_build_evaluation_report.py  (+8 more)
(+56 files in other folders)
