[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-jp-sector-backend"
version = "0.1.0"
description = "US-JP sector lead-lag investment support app - backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Settings management
    "pydantic-settings>=2.2.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-market-calendars>=4.3.0",

    # Price data fetching
    "yfinance>=0.2.40",

    # Machine learning (paper_v1 signal: PCA + Ridge)
    "scikit-learn>=1.5.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",        # for async HTTP / TestClient
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
